--- a/assets/css/certificates.css
+++ b/assets/css/certificates.css
@@ -1,6 +1,5 @@
 .cert-box .card-img-top.certificate {
     transition: transform 0.3s ease-in-out;
-    overflow: hidden;
   }
   
   .cert-box .card-img-top.certificate:hover {
@@ -29,3 +28,7 @@
     width: 50px;
     height: 50px;
   }
+
+  .cert-box .card {
+  overflow: hidden;
+}
