--- a/src/layouts/contacts/contacts.css
+++ b/src/layouts/contacts/contacts.css
@@ -50,3 +50,47 @@
     width: 40px;
     display: inline;
   }
+
+
+
+  #snackbar {
+    visibility: hidden; 
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #04ad18;
+    color: #fff;
+    text-align: center; 
+    border-radius: 5px;
+    font-size: 1.2rem;
+    padding: 16px; 
+    position: fixed; 
+    z-index: 1; 
+    left: 50%; 
+    top: 70px; 
+  }
+  
+  #snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+  @-webkit-keyframes fadein {
+    from {top: 0; opacity: 0;}
+    to {top: 70px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {top: 0; opacity: 0;}
+    to {top: 70px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {top: 70px; opacity: 1;}
+    to {top: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {top: 70px; opacity: 1;}
+    to {top: 0; opacity: 0;}
+  }
