--- a/src/layouts/home/home.css
+++ b/src/layouts/home/home.css
@@ -168,4 +168,20 @@
     d: path("M0,0 C30,10 70,10 100,0 C95,30 95,70 100,100 C70,90 30,90 0,100 C5,70 5,30 0,0");
   }
 
- 
+  @media screen and (max-width:320px ) {
+    .home-header {
+      font-size: 2rem;
+    }
+   }
+
+ @media screen and (max-width:450px ) and (min-width:320px) {
+  .home-header {
+    font-size: 2.5rem;
+  }
+ }
+
+ @media screen and (max-width:600px ) and (min-width:450px) {
+  .home-header {
+    font-size: 3rem;
+  }
+ }
